--- a/netflix.html
+++ b/netflix.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
  <html lang="en">
 <head>
-    <link rel="canonical" href="https://https://demo.themesberg.com/landwind/" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SchemaWind | Praabindh's Org</title>
-    <link rel="SQL-Draw" href="https://drawsql.app/teams/praabindhs-org/diagrams/netflix-clone/embed" />
+    <title>SchemaWind | Netflix</title>
+    <link rel="SQL-Draw" href="https://drawsql.app/teams/praabindhs-org/diagrams/netflix-clone/embed"/>
 
     <!-- Meta SEO -->
     <meta name="title" content="Landwind - Tailwind CSS Landing Page">
@@ -14,18 +13,7 @@
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <meta name="author" content="Themesberg">
-
-    <!-- Social media share -->
-    <meta property="og:title" content=Landwind - Tailwind CSS Landing Page>
-    <meta property="og:site_name" content=Themesberg>
-    <meta property="og:url" content=https://https://demo.themesberg.com/landwind/>
-    <meta property="og:description" content=Get started with a free and open-source landing page for Tailwind CSS built with the Flowbite component library featuring dark mode, hero sections, pricing cards, and more.>
-    <meta property="og:type" content="">
-    <meta property="og:image" content=https://themesberg.s3.us-east-2.amazonaws.com/public/github/landwind/og-image.png>
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@themesberg" />
-    <meta name="twitter:creator" content="@themesberg" />
+    <meta name="author" content="Praabindh Pradeep">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -52,7 +40,7 @@
                     <a href="#" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Log In</a>
                     <a href="SQLs/Netflix-MySQL.sql" download class="text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 lg:mr-0 dark:bg-purple-600 dark:hover:bg-purple-700 focus:outline-none dark:focus:ring-purple-800">Download SQL</a>
                     <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
-                        <span class="sr-only">Open main menu</span>
+                        <span class="sr-only">Open Main Menu</span>
                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
                         <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </button>
@@ -108,10 +96,10 @@
                 <a href="netflix.html" class="flex items-center lg:justify-center">
                     <img src="images/Netflix.png">                    
                 </a>
-                <a href="#" class="flex items-center lg:justify-center">
+                <a href="twitter.html" class="flex items-center lg:justify-center">
                     <img src="images/Twitter.png">                                                                               
                 </a>
-                <a href="#" class="flex items-center lg:justify-center">
+                <a href="instagram.html" class="flex items-center lg:justify-center">
                     <img src="images/Instagram.png">                                
                 </a>
                 <a href="#" class="flex items-center lg:justify-center">
