--- a/twitter.html
+++ b/twitter.html
@@ -102,7 +102,7 @@
                 <a href="instagram.html" class="flex items-center lg:justify-center">
                     <img src="images/Instagram.png">                                
                 </a>
-                <a href="#" class="flex items-center lg:justify-center">
+                <a href="spotify.html" class="flex items-center lg:justify-center">
                     <img src="images/Spotify.png">  
                 </a>
                 <a href="#" class="flex items-center lg:justify-center">
