--- a/netflix.html
+++ b/netflix.html
@@ -105,7 +105,7 @@
                 <a href="spotify.html" class="flex items-center lg:justify-center">
                     <img src="images/Spotify.png">  
                 </a>
-                <a href="#" class="flex items-center lg:justify-center">
+                <a href="discord.html" class="flex items-center lg:justify-center">
                     <img src="images/Discord.png">                                                                          
                 </a>
                 <a href="#" class="flex items-center lg:justify-center">
