Worked With SchemaWind

--- a/discord.html
+++ b/discord.html
@@ -108,7 +108,7 @@
                 <a href="discord.html" class="flex items-center lg:justify-center">
                     <img src="images/Discord.png">                                                                          
                 </a>
-                <a href="#" class="flex items-center lg:justify-center">
+                <a href="whatsapp.html" class="flex items-center lg:justify-center">
                     <img src="images/WhatsApp.png">                                           
                 </a>
             </div>
