Worked With SchemaWind

--- a/discord.html
+++ b/discord.html
@@ -93,7 +93,7 @@
     <section class="bg-white dark:bg-gray-900">
         <div class="max-w-screen-xl px-4 pb-8 mx-auto lg:pb-16">
             <div class="grid grid-cols-2 gap-8 text-gray-500 sm:gap-12 sm:grid-cols-3 lg:grid-cols-6 dark:text-gray-400">
-                <a href="netflix.html" class="flex items-center lg:justify-center">
+                <a href="netflix-schema.html" class="flex items-center lg:justify-center">
                     <img src="images/Netflix.png">                    
                 </a>
                 <a href="twitter.html" class="flex items-center lg:justify-center">
