Worked With SchemaWind

--- a/netflix-schema.html
+++ b/netflix-schema.html
@@ -8,8 +8,8 @@
     <link rel="SQL-Draw" href="https://drawsql.app/teams/praabindhs-org/diagrams/netflix-clone/embed"/>
 
     <!-- Meta SEO -->
-    <meta name="title" content="Landwind - Tailwind CSS Landing Page">
-    <meta name="description" content="Get started with a free and open-source landing page built with Tailwind CSS and the Flowbite component library.">
+    <meta name="title" content="SchemaWind - By Praabindh's Org">
+    <meta name="description" content="An open-source project for developers to use working schema of various fields of technological domains as well as for contributing to resolving the rising demands of models, database structures, and schema in the back-end applications.">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
