--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SchemaWind | Praabindh's Org</title>
     <link rel="SQL-Draw" href="https://drawsql.app/teams/praabindhs-org/diagrams/paypal-clone/embed" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- Meta SEO -->
     <meta name="title" content="SchemaWind - By Praabindh's Org">
