--- a/netflix-schema.html
+++ b/netflix-schema.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SchemaWind | Netflix</title>
     <link rel="SQL-Draw" href="https://drawsql.app/teams/praabindhs-org/diagrams/netflix-clone/embed"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- Meta SEO -->
     <meta name="title" content="SchemaWind - By Praabindh's Org">
@@ -26,6 +29,11 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
+    <style>
+        body {
+            font-family: 'Ubuntu', sans-serif;
+        }
+    </style>
     <header class="fixed w-full">
         <nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-900">
             <div class="flex flex-wrap items-center justify-between max-w-screen-xl px-4 mx-auto">
