--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
+    <style>
+        body {
+            font-family: 'Ubuntu', sans-serif;
+        }
+    </style>
     <header class="fixed w-full">
         <nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-900">
             <div class="flex flex-wrap items-center justify-between max-w-screen-xl px-4 mx-auto">
